[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/GameSetting.gd" type="Script" id=1]
[ext_resource path="res://GameTheme.theme" type="Theme" id=2]

[node name="GameSetting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -133.0
margin_right = 225.0
margin_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="Controls"]
margin_right = 450.0
margin_bottom = 176.0

[node name="NameSetting" type="VBoxContainer" parent="Controls/Top"]
margin_right = 178.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Controls/Top/NameSetting"]
margin_right = 178.0
margin_bottom = 21.0
text = "Player 1 Name:"

[node name="LineEdit" type="LineEdit" parent="Controls/Top/NameSetting"]
margin_top = 25.0
margin_right = 178.0
margin_bottom = 56.0

[node name="Label2" type="Label" parent="Controls/Top/NameSetting"]
margin_top = 60.0
margin_right = 178.0
margin_bottom = 81.0
text = "Player 2 Name:"

[node name="LineEdit2" type="LineEdit" parent="Controls/Top/NameSetting"]
margin_top = 85.0
margin_right = 178.0
margin_bottom = 116.0

[node name="Label3" type="Label" parent="Controls/Top/NameSetting"]
margin_top = 120.0
margin_right = 178.0
margin_bottom = 141.0
text = "Player 3 Name:"

[node name="LineEdit3" type="LineEdit" parent="Controls/Top/NameSetting"]
margin_top = 145.0
margin_right = 178.0
margin_bottom = 176.0

[node name="VSeparator" type="VSeparator" parent="Controls/Top"]
margin_left = 182.0
margin_right = 186.0
margin_bottom = 176.0

[node name="Vict" type="VBoxContainer" parent="Controls/Top"]
margin_left = 190.0
margin_right = 450.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Controls/Top/Vict"]
margin_right = 260.0
margin_bottom = 21.0
text = "Game Type:"

[node name="Type" type="OptionButton" parent="Controls/Top/Vict"]
margin_top = 25.0
margin_right = 260.0
margin_bottom = 56.0
text = "Free Play"
items = [ "Free Play", null, false, 0, null, "Best of [X] Rounds", null, false, 1, null, "First to [X] Score", null, false, 2, null ]
selected = 0

[node name="Rounds" type="HBoxContainer" parent="Controls/Top/Vict"]
margin_top = 60.0
margin_right = 260.0
margin_bottom = 91.0

[node name="CheckBox" type="CheckBox" parent="Controls/Top/Vict/Rounds"]
margin_right = 170.0
margin_bottom = 31.0
text = "Rounds to Win:"

[node name="SpinBox" type="SpinBox" parent="Controls/Top/Vict/Rounds"]
margin_left = 174.0
margin_right = 260.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
value = 7.0
rounded = true

[node name="Score" type="HBoxContainer" parent="Controls/Top/Vict"]
margin_top = 95.0
margin_right = 260.0
margin_bottom = 126.0

[node name="CheckBox" type="CheckBox" parent="Controls/Top/Vict/Score"]
margin_right = 152.0
margin_bottom = 31.0
text = "Score to Win:"

[node name="SpinBox" type="SpinBox" parent="Controls/Top/Vict/Score"]
margin_left = 156.0
margin_right = 260.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 150.0
max_value = 20000.0
step = 50.0
value = 150.0
rounded = true

[node name="VSeparator" type="HSeparator" parent="Controls"]
margin_top = 180.0
margin_right = 450.0
margin_bottom = 184.0

[node name="OptionButton" type="OptionButton" parent="Controls"]
margin_top = 188.0
margin_right = 450.0
margin_bottom = 219.0
text = "Select Entry Profile . . ."

[node name="VSeparator2" type="HSeparator" parent="Controls"]
margin_top = 223.0
margin_right = 450.0
margin_bottom = 227.0

[node name="Button" type="Button" parent="Controls"]
margin_top = 231.0
margin_right = 450.0
margin_bottom = 262.0
text = "Start"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -64.5
margin_right = 92.0
margin_bottom = 64.5
window_title = "Error!"
dialog_text = "Selected Profile is empty. Please edit the profile or choose a different one."
dialog_autowrap = true
[connection signal="item_selected" from="Controls/Top/Vict/Type" to="." method="_on_Type_item_selected"]
[connection signal="value_changed" from="Controls/Top/Vict/Rounds/SpinBox" to="." method="_on_Rounds_value_changed"]
[connection signal="value_changed" from="Controls/Top/Vict/Score/SpinBox" to="." method="_on_Score_value_changed"]
[connection signal="pressed" from="Controls/Button" to="." method="_on_Button_pressed"]
